--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -165,3 +165,22 @@
 	pages = {996},
 	file = {[PDF] womanscientist.com:/home/huff/.zotero/zotero/m4c2d0jp.default/zotero/storage/6N9KKGMK/Loman and Watson - 2013 - So you want to be a computational biologist.pdf:application/pdf;Snapshot:/home/huff/.zotero/zotero/m4c2d0jp.default/zotero/storage/M267IZQC/1.html:text/html}
 }
+
+@unpublished{wilson_collaborative-lesson-development:_2017,
+	address = {submitted to PLOS},
+	type = {pre-print},
+	title = {collaborative-lesson-development: 10 {Simple} {Rules} paper on collaborative lesson development},
+	shorttitle = {collaborative-lesson-development},
+	url = {https://github.com/swcarpentry/collaborative-lesson-development},
+	abstract = {The model of collaborative code development presents an
+alternative model to traditional scientific lesson
+development. By leveraging a community approach, educational
+resources can be more sustainable, robust, and responsive.
+These ten simple rules outline best practices for this model of
+collaborative resource development.},
+	author = {Wilson, Greg and Harris, Rayna and Irving, Damien and Hertwick, Kate and Milligan, Ian and Emonet, Remi and Devenyi, Gabriel},
+	month = jun,
+	year = {2017},
+	note = {original-date: 2017-06-07T20:19:58Z},
+	file = {Snapshot:/home/huff/.zotero/zotero/m4c2d0jp.default/zotero/storage/U6QRABQA/collaborative-lesson-development.html:text/html}
+}
